# QMAP

./: .gitignore  AO33.code-workspace  README.md  flowchart  mypy.ini  pyproject.toml  pytest.ini  requirements.txt
Boulder_Statistics/: step_base.py  steps_orchestrator.py  task_factory.py  task_step_base.py
Boulder_Statistics/environment_tools/: fs_environment.py
Boulder_Statistics/environment_tools/base_classes/: fs_adapter_base.py  fs_path_base.py
Boulder_Statistics/environment_tools/file_storage_persists/: runtime_only_persist.py
Boulder_Statistics/environment_tools/fs_markers/: fs_marker_string.py
Boulder_Statistics/environment_tools/fs_paths/: fs_path_local_disk.py  fs_path_memory.py
Boulder_Statistics/environment_tools/utils/: FS_environment_factory.py
Boulder_Statistics/examples/: bouldernet_preprocess_tests.py  main_run.py
Boulder_Statistics/file_storage_adapters/: copy_adapter.py  iio_adapter.py  memory_adapter.py  npz_detection_adapter.py  numpy_adapter.py  pandas_pickle_adapter.py  pds4_adapter.py  pickle_adapter.py  pillow_image_adapter.py  plt_plot_adapter.py  png_adapter.py  polars_obj_adapter.py  polars_obj_adapter_fast.py  tiff_adapter.py  trimesh_obj_adapter.py  txt_adapter.py
Boulder_Statistics/steps/: Best_model_downloader.py  OBJ_to_LAS.py  PAN_to_LOD.py  PDS_downloader.py  PDS_to_PNG.py  SPICE_kernels_downloader.py  chunked_downloader.py  detection_merge.py  pds4_boulderNet_inference.py  plot_standard_detection_results.py  simple_function_import_export.py  simple_local_file.py  simple_request.py
Boulder_Statistics/steps/utils/: chunked_downloader_utils.py  cubemap_lod_base.py  docker_helpers.py  docker_helpersCUDA.py  single_stream_downloader.py
analysis/AkaikeWeights/: MLE_analysis.ipynb  param_stability_analysis.ipynb  workbook.ipynb  workbook_simple_LogNormal.ipynb  workbook_simple_PowerLaw.ipynb  workbook_simple_Weibull.ipynb
analysis/CubemapOfDetections/: Phi_mesh_as_cubemap.ipynb  render_boulders_as_cubemap.ipynb
analysis/EstimatingS/: bootstrap_kde_method.ipynb
analysis/LODS/: workbook.ipynb
analysis/MultiPlots/: Mann_Kendall_analysis.ipynb  Overall_fit_analysis.ipynb  get_plot_figures.ipynb  workbook_simple_PowerLaw.ipynb
analysis/PHI/: res.py  workbook.ipynb
analysis/PSFD/: check_assumptions.ipynb  quick_calculate.py  res.py  workbook.ipynb  workbook_norm_investigation.ipynb  workbook_simple.ipynb  workbook_simple_analysis.ipynb  workbook_simple_one_dof.ipynb
analysis/PSFDCont/: MLE_analysis.ipynb  estimating_S.ipynb  investigate_S_from_manual_db_merged.ipynb  investigate_S_from_manual_db_unmerged.ipynb  manual_detections_to_database.ipynb  manual_outlines_to_database.ipynb  render_manual_boulder_selections.ipynb  workbook_simple.ipynb  workbook_simple_LogNormal.ipynb  workbook_simple_PowerLaw.ipynb  workbook_simple_Weibull.ipynb
analysis/PSFDCont/.database/: S_manual_interp copy.parquet  S_manual_interp.parquet  manual_detection_database.parquet
analysis/PowerLawMultiLADMin/: MLE_Multi_LAD_min_fit.ipynb  analysis.ipynb  investigate_g.ipynb  phi_agg_df.parquet
analysis/Refine_plus/: 00_add_areas.ipynb  01_add_tir_maps.ipynb  01_cleanup_db.ipynb  02_add_spectral.ipynb  02_add_vnir_maps.ipynb  02_identify_facets.ipynb  02_not_needed_but_usefull.ipynb  03_merge_spectral.ipynb  10_combine_pass_00.ipynb  11_agg_for_boulder_id.ipynb  12_agg_for_tri_nums.ipynb  agg_combine_db.ipynb  combine_export_pool.ipynb  inspect.ipynb  inspect_agg_example.ipynb  inspect_all.ipynb  join_agg_data_to_full_db.ipynb  run_all.ipynb  schema copy.md  schema.md  schema_description.md
analysis/Run_pipeline/: main_run.py
cache/: Download the best boulderNet model-7499046595977882462  Downloader for the bennu PAN file-8674777948742606048
examples/: OBJ_boulder_detections.py  PAN_boulder_detections.py  PAN_boulder_detections_D4.py  bouldernet_preprocess_tests.py  create_tiles_pan.py  main_run.py
examples/tests/: OBJ_boulder_detections.py  PAN_boulder_detections.py  PAN_boulder_detections_D4.py  evaluate_quality.py
images/v1.1_images/: v1.1-flowchart.py
integration-tests/: pyproject.toml
integration-tests/tests/: bouldernet_preprocess_tests.py  main_run.py  map_sphere.ipynb  test_integration.py
src/: logger_factory.py  main.py  pipeline_step_base.py
src/ao33/: logger_factory.py  main.py
src/ao33/gui/: demo.py
src/boulder_statistics/: hash_cleaner_factory.py  inspect_tools.py  result_cache.py  standard_infer_run.py  standard_refine_run.py  standard_run.py  step_base.py  step_default_adapters.py  step_default_markers.py  step_default_paths.py  steps_orchestrator.py  task_factory.py  task_step_base.py
src/gui/: demo.py
src/load_steps/: load_step_base.py  load_step_factory.py
src/pull_steps/: pull_step_factory.py
testing/MicroserviceTest/: client.py  server.py  venvSetupCPU.txt  venvSetupGPU.txt
tests/: simple_flow.py
(+915 files in other folders)
