[tool.poetry]
name = "boulder_statistics"
version = "0.1.0"
description = "Find statistics from images of boulders"
readme = "README.md"
packages = [
  { include = "boulder_statistics", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.11, <3.15"
testcv2 = "0.0.1"
docker = "7.1.0"
graphviz = "0.21"
jinja2 = "3.1.6"
joblib = "1.5.2"
more-itertools = "10.8.0"
pandas = "2.3.3"
pds4-tools = "1.4"
polars = "1.35.2"
requests = "2.32.5"
scienceplots = "2.2.0"
tqdm = "4.67.1"
trimesh = "4.10.1"
urllib3 = "2.6.0"
datashader = "0.18.2"
imageio = "2.37.2"
libigl = "2.6.1"
matplotlib = "3.10.7"
numpy = "2.3.5"
pillow = "12.0.0"
tifffile = "2025.10.16"
tqdm-joblib = "0.0.5"
torch = "2.9.1"


[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"