[tool.poetry]
name = "boulder_statistics"
version = "0.1.0"
description = "Find statistics from images of boulders"
readme = "README.md"
packages = [
  { include = "boulder_statistics", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.11, <3.15"
docker = "^7.1.0"
numpy = ">=2,<2.3.0"
opencv-python = "^4.12.0"
graphviz = "^0.21"
jinja2 = "^3.1.6"
joblib = "^1.5.2"
more-itertools = "^10.8.0"
pandas = "^2.3.3"
pds4-tools = "^1.4"
polars = "^1.35.2"
requests = "^2.32.5"
scienceplots = "^2.2.0"
tqdm = "^4.67.1"
trimesh = "^4.10.1"
urllib3 = "^2.6.0"
datashader = "^0.18.2"
imageio = "^2.37.2"
libigl = "^2.6.1"
matplotlib = "^3.10.7"
pillow = "^12.0.0"
tifffile = "^2025.10.16"
tqdm-joblib = "^0.0.5"
torch = "^2.9.1"
stablehash = "^0.3.0"
pyarrow = "^22.0.0"
ndpyramid = "^0.4.0"
xarray = "^2025.12.0"
zarr = "^3.1.5"
dask = {extras = ["complete"], version = "^2025.12.0"}
distributed = "^2025.12.0"
scikit-image = "^0.25.2"
bidict = "^0.23.1"
tenacity = "^9.1.2"
imagecodecs = "^2026.1.14"
statsmodels = "^0.14.6"
scikit-learn = "^1.9.0"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
[dependency-groups]
dev = [
    "ipykernel (>=7.3.0,<8.0.0)"
]
