[tool.poetry]
name = "bennu-feature-extractor-integration-tests"
version = "0.1.0"
description = "Foo add-on step for bennu-feature-extractor"
readme = "README.md"
package-mode = false
packages = []

[tool.poetry.dependencies]
python = "<4.0,>=3.9"
bennu-feature-extractor = { path = "../packages/bennu-feature-extractor", develop = true }
bennu-feature-extractor-BoulderNet = { path = "../packages/bennu-feature-extractor-BoulderNet", develop = true }
bennu-feature-extractor-PDS = { path = "../packages/bennu-feature-extractor-PDS", develop = true }
graphviz = "^0.21"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-cov = "^4.1"